--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   logger: ^2.0.2
   email_validator: ^2.1.17
   get_it: ^7.6.4
+  cloud_firestore: ^4.9.1
 
 dev_dependencies:
   flutter_test:
