--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+
+	<key>CLIENT_ID</key>
+	<string>379857775002-97kgi22beiqip05a0k4jb2moqn5tgjvd.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.379857775002-97kgi22beiqip05a0k4jb2moqn5tgjvd</string>
+
 	<key>API_KEY</key>
 	<string>AIzaSyCgyYkZf6ViT6lrbNxWmyRHr8JrE8cdUpQ</string>
 	<key>GCM_SENDER_ID</key>
