--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   email_validator: ^2.1.17
   get_it: ^7.6.4
   cloud_firestore: ^4.9.1
+  google_sign_in: ^6.1.5
 
 dev_dependencies:
   flutter_test:
