--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   get_it: ^7.6.4
   cloud_firestore: ^4.9.1
   google_sign_in: ^6.1.5
+  font_awesome_flutter: ^10.5.0
 
 dev_dependencies:
   flutter_test:
