--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   cloud_firestore: ^4.9.1
   google_sign_in: ^6.1.5
   font_awesome_flutter: ^10.5.0
+  cached_network_image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
